<resources>
    <string name="app_name">Amagotchi</string>

    <string name="action_settings">Einstellungen</string>

    <string name="new_game_btn">Neues Spiel</string>
    <string name="continue_game_btn">Spiel fortsetzen</string>
    <string name="settings_btn">Einstellungen</string>
    <string name="game_history_bn">Spielhistorie</string>

    <string name="name_textedit">Name</string>
    <string name="cont_btn">Weiter</string>
    <string name="choose_amagotchi_description">Wählen Sie bitte ein Amagotchi aus. Bedenken Sie, dass Ihre Wahl im Nachhinein nicht mehr geändert werden kann, ohne ihren Fortschritt dabei zu löschen.</string>

    <string name="solid_food_description">Dieses Nahrungsmittel sättigt schenll ist jedoch nicht so gut für die Fitness sollte daher mit Vorsicht verwendet werden.</string>
    <string name="candy_food_description">Dieses Nahrungsmittel hebt die Motivation und das Wohlbefinden des Amagotchi ist  dennoch nicht so gesund!</string>
    <string name="healthy_food_description">Diese Nahrungsmittel stellt die nachhaltigste Nahrungsquelle dar.</string>
    <string name="higher_or_lower_description">Schätze ob die nächste Zahl größer oder kleiner ist als die vorherige.</string>
    <string name="left_or_right_description">Rate ob das Amagotchi am Ende der Runde nach links oder nach rechts gedreht sein wird.</string>
    <string name="sum_up_game_description">In diesem Minigame wird dem Amagotchi eine Aufgabe gestellt und 3 mögliche Lösungen gegeben, das Amagotchi muss sich für die richtige Lösung entscheiden.</string>
    <string name="talking_to_egg">Amagotchi gut zureden</string>
    <string name="warming_egg">Ei Wärmen</string>
    <string name="stats">Statistik</string>
</resources>
