<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="50dp"
        android:id="@+id/titleView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/new_game_btn"
        android:id="@+id/newGameBtn"
        android:onClick="onNewGame"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/continue_game_btn"
        android:id="@+id/contGameBtn"
        android:onClick="onContGame"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/newGameBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/settings_btn"
        android:id="@+id/settingsBtn"
        android:onClick="onSettings"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/contGameBtn"
        android:layout_centerHorizontal="true"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/game_history_bn"
        android:id="@+id/gameHistoryBtn"
        android:onClick="onGameHistory"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/settingsBtn"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
