<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".MainActivity">

    <EditText
        android:id="@+id/amagotchi_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_textedit"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_amagotchi_textview"
        android:text="@string/choose_amagotchi_description"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/amagotchi_name_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amagotchi_1"
        android:src="@drawable/egg_1"
        android:layout_marginTop="84dp"
        android:background="@android:color/transparent"
        android:onClick="onAmagotchiClicked"
        android:layout_below="@+id/choose_amagotchi_textview"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont_btn"
        android:id="@+id/cont_btn"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="onBeginNewGame"
        android:layout_below="@+id/amagotchi_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp" />


</RelativeLayout>