<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:id="@+id/solidFoodBtn"
        android:src="@drawable/burger"
        android:onClick="feedSelection"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_toRightOf="@id/solidFoodBtn"
        android:background="#eee"
        android:text="@string/solid_food_description"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_below="@id/solidFoodBtn"
        android:id="@+id/candyFoodBtn"
        android:src="@drawable/chocolate"
        android:onClick="feedSelection"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/candyFoodBtn"
        android:layout_below="@id/solidFoodBtn"
        android:layout_marginTop="70dp"
        android:background="#eee"
        android:text="@string/candy_food_description"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_below="@id/candyFoodBtn"
        android:id="@+id/healthyFoodBtn"
        android:src="@drawable/aple"
        android:onClick="feedSelection"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/healthyFoodBtn"
        android:layout_below="@id/candyFoodBtn"
        android:layout_marginTop="70dp"
        android:background="#eee"
        android:text="@string/healthy_food_description"
        />
</RelativeLayout>